기본적인 기초코드 생성 로직 추가